Created a basic template

--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divya|Resume</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Slab:wght@100..900&display=swap"
+        rel="stylesheet">
+    <style>
+        .gilda-display-regular {
+            font-family: "Gilda Display", serif;
+            font-weight: BOLDER;
+            font-style: normal;
+        }
+    </style>
 </head>
+
 <body>
 
+    <div class="primary">
+        <div class="details">
+            <p class="gilda-display-regular" id="p1">DIVYA</p>
+            <p class="gilda-display-regular">COMPUTER SCIENCE ENGINEERING STUDENT</p>
+            <a class="gilda-display-regular" href="mailto:divyaselvam1405@gmail.com" target="_blank"> Email |</a>
+            <a class="gilda-display-regular " href="https://github.com/D-I-V-Y-A-S" target="_blank"> Github |</a>
+            <a class="" href="tel:9876543210" target="_blank"> Phone</a>
+        </div>
 </body>
+
 </html>
