First Draft of Resume

--- a/index.html
+++ b/index.html
@@ -21,15 +21,66 @@
 </head>
 
 <body>
-
     <div class="primary">
         <div class="details">
             <p class="gilda-display-regular" id="p1">DIVYA</p>
-            <p class="gilda-display-regular">COMPUTER SCIENCE ENGINEERING STUDENT</p>
+            <p class="gilda-display-regular" id="p1">COMPUTER SCIENCE ENGINEERING STUDENT</p>
             <a class="gilda-display-regular" href="mailto:divyaselvam1405@gmail.com" target="_blank"> Email |</a>
             <a class="gilda-display-regular " href="https://github.com/D-I-V-Y-A-S" target="_blank"> Github |</a>
             <a class="" href="tel:9876543210" target="_blank"> Phone</a>
         </div>
+        <br>
+        <section class="main-section">
+            <h2>CAREER OBJECTIVE</h2>
+            <p>Computer science student with a focus on web development. Can adopt front-end technologies and to create
+                engaging and user-friendly websites. Seeking opportunities to grow and contribute in a dynamic web
+                development team.</p>
+        </section>
+        <section class="main-section">
+            <h2>EDUCATION QUALIFICATION</h2>
+            <p id="p2">Saveetha Engineering College-Bachelor of Engineering in Computer Science and
+                Engineering(2021-2025)</p>
+            <p id="p3">CGPA: 8.5</p>
+        </section>
+        <section>
+            <h2>TECHNICAL SKILLS</h2>
+            <li>JAVA</li>
+            <li>PYTHON</li>
+            <li>SQL</li>
+            <li>C++</li>
+            <li>C</li>
+        </section>
+        <section>
+            <h2>INTERNSHIP</h2>
+            <p>Done at: Connect Infosystems</p>
+            <p>Duration: Jan 2023 - Feb 2023</p>
+            <p>Technologies Learned: Web Design and Development</p>
+        </section>
+        <section>
+            <h2>ACTIVITIES</h2>
+            <li>Attended hands-on workshop titled ''AWS CLOUD PRACTITIONER'' organized by Department of Information at
+                Saveetha Enginnering College.</li>
+            <li>Participated in "CODERS CHEMISTRY" as a part of trojans -a National level technical symposium held at
+                Chennai Institute of Technology.</li>
+            <li>Done a mini-project on Coronary heart disease prediction using ensemble method.</li>
+        </section>
+        <section>
+            <h2>CERTIFICATION COURSES</h2>
+            <li>Ui path studio family - (LEARNATHON INDIA 2023)</li>
+            <li>AWS Cloud Foundations - ICT ACADEMY - (July 2023)</li>
+            <li>Basic introduction to linux course - SKILLUP - (Nov 2022)
+            </li>
+            <li>Operating systems and shell scripting - (NASSCOM FUTURESKILLS PRIME)</li>
+            <li>SQL FUNDAMENTALS - (NASSCOM FUTURESKILLS PRIME)</li>
+            <li>Completed the course Social Networks - (National Programme on Technology Enhanced Learning)</li>
+            <li>Completed the course Data Analytics Using Python - (National Programme on Technology Enhanced Learning)
+            </li>
+        </section>
+        <section>
+            <h2>DECLARATION</h2>
+            <p>I hereby declare that my knowledge facts given above are genuine to the best of my knowledge and belief.
+            </p>
+        </section>
 </body>
 
 </html>
