Second draft of resume

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 <body>
     <div class="primary">
         <div class="details">
-            <p class="gilda-display-regular" id="p1">DIVYA</p>
-            <p class="gilda-display-regular" id="p1">COMPUTER SCIENCE ENGINEERING STUDENT</p>
+            <h1 class="gilda-display-regular" id="p1">DIVYA</h1>
+            <h5 class="gilda-display-regular" ><em>COMPUTER SCIENCE ENGINEERING STUDENT</em></h5>
             <a class="gilda-display-regular" href="mailto:divyaselvam1405@gmail.com" target="_blank"> Email |</a>
             <a class="gilda-display-regular " href="https://github.com/D-I-V-Y-A-S" target="_blank"> Github |</a>
-            <a class="" href="tel:9876543210" target="_blank"> Phone</a>
+            <a class="gilda-display-regular" href="tel:9876543210" target="_blank"> Phone</a>
         </div>
         <br>
-        <section class="main-section">
+        <section>
             <h2>CAREER OBJECTIVE</h2>
-            <p>Computer science student with a focus on web development. Can adopt front-end technologies and to create
+            <p>Computer science student with a focus on web development. Can adopt front-end technologies and create
                 engaging and user-friendly websites. Seeking opportunities to grow and contribute in a dynamic web
                 development team.</p>
         </section>
-        <section class="main-section">
+        <section>
             <h2>EDUCATION QUALIFICATION</h2>
             <p id="p2">Saveetha Engineering College-Bachelor of Engineering in Computer Science and
                 Engineering(2021-2025)</p>
@@ -58,8 +58,7 @@
         </section>
         <section>
             <h2>ACTIVITIES</h2>
-            <li>Attended hands-on workshop titled ''AWS CLOUD PRACTITIONER'' organized by Department of Information at
-                Saveetha Enginnering College.</li>
+            <li>Attended hands-on workshop titled 'AWS CLOUD PRACTITIONER'at Saveetha Enginnering College.</li>
             <li>Participated in "CODERS CHEMISTRY" as a part of trojans -a National level technical symposium held at
                 Chennai Institute of Technology.</li>
             <li>Done a mini-project on Coronary heart disease prediction using ensemble method.</li>
@@ -72,8 +71,8 @@
             </li>
             <li>Operating systems and shell scripting - (NASSCOM FUTURESKILLS PRIME)</li>
             <li>SQL FUNDAMENTALS - (NASSCOM FUTURESKILLS PRIME)</li>
-            <li>Completed the course Social Networks - (National Programme on Technology Enhanced Learning)</li>
-            <li>Completed the course Data Analytics Using Python - (National Programme on Technology Enhanced Learning)
+            <li>Social Networks - (National Programme on Technology Enhanced Learning)</li>
+            <li>Data Analytics Using Python - (National Programme on Technology Enhanced Learning)
             </li>
         </section>
         <section>
