--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="primary">
         <div class="details">
             <h1 class="gilda-display-regular" id="p1">DIVYA</h1>
-            <h5 class="gilda-display-regular" ><em>COMPUTER SCIENCE ENGINEERING STUDENT</em></h5>
+            <h5 class="gilda-display-regular"><em>COMPUTER SCIENCE ENGINEERING STUDENT</em></h5>
             <a class="gilda-display-regular" href="mailto:divyaselvam1405@gmail.com" target="_blank"> Email |</a>
             <a class="gilda-display-regular " href="https://github.com/D-I-V-Y-A-S" target="_blank"> Github |</a>
             <a class="gilda-display-regular" href="tel:9876543210" target="_blank"> Phone</a>
@@ -34,14 +34,14 @@
             <h2>CAREER OBJECTIVE</h2>
             <p>Computer science student with a focus on web development. Can adopt front-end technologies and create
                 engaging and user-friendly websites. Seeking opportunities to grow and contribute in a dynamic web
-                development team.</p>
+                development team.</p><hr>
         </section>
         <section>
             <h2>EDUCATION QUALIFICATION</h2>
             <p id="p2">Saveetha Engineering College-Bachelor of Engineering in Computer Science and
                 Engineering(2021-2025)</p>
             <p id="p3">CGPA: 8.5</p>
-        </section>
+        </section><hr>
         <section>
             <h2>TECHNICAL SKILLS</h2>
             <li>JAVA</li>
@@ -49,20 +49,20 @@
             <li>SQL</li>
             <li>C++</li>
             <li>C</li>
-        </section>
+        </section><hr>
         <section>
             <h2>INTERNSHIP</h2>
             <p>Done at: Connect Infosystems</p>
             <p>Duration: Jan 2023 - Feb 2023</p>
             <p>Technologies Learned: Web Design and Development</p>
-        </section>
+        </section><hr>
         <section>
             <h2>ACTIVITIES</h2>
             <li>Attended hands-on workshop titled 'AWS CLOUD PRACTITIONER'at Saveetha Enginnering College.</li>
             <li>Participated in "CODERS CHEMISTRY" as a part of trojans -a National level technical symposium held at
                 Chennai Institute of Technology.</li>
             <li>Done a mini-project on Coronary heart disease prediction using ensemble method.</li>
-        </section>
+        </section><hr>
         <section>
             <h2>CERTIFICATION COURSES</h2>
             <li>Ui path studio family - (LEARNATHON INDIA 2023)</li>
@@ -74,11 +74,11 @@
             <li>Social Networks - (National Programme on Technology Enhanced Learning)</li>
             <li>Data Analytics Using Python - (National Programme on Technology Enhanced Learning)
             </li>
-        </section>
+        </section><hr>
         <section>
             <h2>DECLARATION</h2>
             <p>I hereby declare that my knowledge facts given above are genuine to the best of my knowledge and belief.
-            </p>
+            </p><hr>
         </section>
 </body>
 
