--- a/index.html
+++ b/index.html
@@ -1,7 +1,87 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<!DOCTYPE html>
+<html lang="en">
 
-    <modelVersion>4.0.0</modelVersion>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Divya|Resume</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gilda+Display&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Slab:wght@100..900&display=swap"
+        rel="stylesheet">
+    <style>
+        .gilda-display-regular {
+            font-family: "Gilda Display", serif;
+            font-weight: BOLDER;
+            font-style: normal;
+        }
+    </style>
+</head>
 
-</project>
+<body>
+    <div class="primary">
+        <div class="details">
+            <h1 class="gilda-display-regular" id="p1">DIVYA</h1>
+            <h5 class="gilda-display-regular"><em>COMPUTER SCIENCE ENGINEERING STUDENT</em></h5>
+            <img src="assets/image/mail.jpg" height=30px width=30px/>
+            <a class="gilda-display-regular" href="mailto:divyaselvam1405@gmail.com" target="_blank"> Email |</a>
+            <img src="assets/image/Github.png" height=30px width=30px/>
+            <a class="gilda-display-regular " href="https://github.com/D-I-V-Y-A-S" target="_blank"> Github |</a>
+            <img src="assets/image/whatsapp.png" height=30px width=30px/>
+            <a class="gilda-display-regular" href="https://wa.me/9876543210" target="_blank">Whatsapp</a>
+        </div>
+        <br>
+        <section >
+            <h2>CAREER OBJECTIVE</h2><br>
+            <p class="size">Computer science student with a focus on web development. Can adopt front-end technologies and create
+                engaging and user-friendly websites. Seeking opportunities to grow and contribute in a dynamic web
+                development team.</p><hr><br>
+        </section>
+        <section >
+            <h2>EDUCATION QUALIFICATION</h2><br>
+            <p class="size" id="p2">Saveetha Engineering College-Bachelor of Engineering in Computer Science and
+                Engineering(2021-2025)</p>
+            <p class="size" id="p3">CGPA: 8.5</p>
+        </section><hr><br>
+        <section>
+            <h2>TECHNICAL SKILLS</h2><br>
+            <li>JAVA</li>
+            <li>PYTHON</li>
+            <li>SQL</li>
+            <li>C++</li>
+            <li>C</li>
+        </section><hr><br>
+        <section >
+            <h2>INTERNSHIP</h2><br>
+            <p class="size">Done at: Connect Infosystems</p>
+            <p class="size">Duration: Jan 2023 - Feb 2023</p>
+            <p class="size">Technologies Learned: Web Design and Development</p>
+        </section><hr><br>
+        <section class="size">
+            <h2>ACTIVITIES</h2><br>
+            <li>Attended hands-on workshop titled 'AWS CLOUD PRACTITIONER'at Saveetha Enginnering College.</li><br>
+            <li>Participated in "CODERS CHEMISTRY" as a part of trojans -a National level technical symposium held at
+                Chennai Institute of Technology.</li><br>
+            <li>Done a mini-project on Coronary heart disease prediction using ensemble method.</li>
+        </section><hr><br>
+        <section class="size">
+            <h2>CERTIFICATION COURSES</h2><br>
+            <li>Ui path studio family - (LEARNATHON INDIA 2023)</li><br>
+            <li>AWS Cloud Foundations - ICT ACADEMY - (July 2023)</li><br>
+            <li>Basic introduction to linux course - SKILLUP - (Nov 2022)
+            </li><br>
+            <li>Operating systems and shell scripting - (NASSCOM FUTURESKILLS PRIME)</li><br>
+            <li>SQL FUNDAMENTALS - (NASSCOM FUTURESKILLS PRIME)</li><br>
+            <li>Social Networks - (National Programme on Technology Enhanced Learning)</li><br>
+            <li>Data Analytics Using Python - (National Programme on Technology Enhanced Learning)
+            </li><br>
+        </section><hr><br>
+        <section >
+            <h2>DECLARATION</h2><br>
+            <p class="size">I hereby declare that my knowledge facts given above are genuine to the best of my knowledge and belief.
+            </p><hr><br>
+        </section>
+</body>
+
+</html>
